# librarAIn-server

./: .gitignore  AUDIT-2026-06-10.md  Makefile  PRD-Fase1.md  PRD_research.md  README.md  RagAIO.py  TODO-ingestion-fix.md  example.env  prompt.md  pyproject.toml  requirements.txt  trascrizione-fogli-manoscritti.md
.github/workflows/: ci.yml
data/db/: biblioteca.db
data/polyindex/: INDEX.json  TOC.json
data/research/: catalog.json
scripts/: backfill_books_from_manifest.py  backfill_index_book_meta.py  backfill_time_index.py  backup_data.py  merge_pdf_pages.py  sort_index_files.py
src/api/: ingest_form.py  ingest_http_server.py  ingest_pipeline_runner.py  job_registry.py  research_handlers.py
src/core/: config.py  errors.py  hashing.py  lmstudio_models.py  log.py  openai_client.py  openai_client_sync.py  rate_limit.py  retry.py  text.py
src/ingestion/: book_md_builder.py  index_builder.py  markdown_artifacts.py  orchestrator.py  output_writer.py  page_enumeration.py  pdf_alignment.py  progress.py  request_validation.py  tmp_cleanup.py  toc_builder.py  toc_index_refine.py
src/models/: polyindex_index.py  polyindex_toc.py  request.py  settings.py
src/persistence/: book_page_exclude.py  (+7 more)
tests/: test_backup_data.py  test_book_md_builder.py  test_book_page_exclude.py  test_book_page_preview.py  test_book_page_repair.py  test_book_pages_audit.py  test_config.py  test_index_builder.py  test_index_md_parser.py  test_ingest_form.py  test_ingest_http_server.py  test_ingest_pipeline_runner.py  test_job_registry.py  test_lmstudio_models.py  test_logging.py  test_logging_propagation.py  test_ocr_engine.py  test_openai_client.py  test_operator_notes_guard.py  test_orchestrator.py  test_output_writer.py  test_page_enumeration.py  test_pdf_alignment.py  test_pipeline_runs.py  test_polyindex_file_lock.py  test_polyindex_index.py  test_polyindex_models.py  test_polyindex_toc.py  test_rate_limit.py  test_render.py  test_request_validation.py  test_research_article_llm.py  test_research_chapter_expansion.py  test_research_e2e.py  test_research_http.py  test_research_page_relevance.py  test_research_pages_loader.py  test_research_poh_links_llm.py  test_research_postprocess.py  test_research_request_schema.py  (+13 more)
web/: admin.html  index.html  ingest-lab-inline.js  ingest-mock-inline.js  log.js  ricerca.html
(+3020 files in other folders)
