[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "librarain-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7,<2",
    "Pillow>=10,<12",
    "pypdf>=6.10,<7",
    "pypdfium2>=5.8,<6",
    "pydantic>=2.13,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
