[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "librarain-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11,<3",
    "torchvision>=0.26,<1",
    "easyocr>=1.7,<2",
    "Pillow>=10,<13",
    "pypdf>=6.10,<7",
    "pypdfium2>=5.8,<6",
    "pydantic>=2.13,<3",
    "openai>=1.50",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.librarain.torch]
cuda_index_url = "https://download.pytorch.org/whl/cu128"
cpu_index_url = "https://download.pytorch.org/whl/cpu"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["venv", "data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# Gli script aggiungono la repo root a sys.path prima degli import del progetto.
"scripts/*" = ["E402"]
